--- a/backend/templates/exampleapp/index.html
+++ b/backend/templates/exampleapp/index.html
@@ -2,14 +2,14 @@
 
 
 {% block body %}
-<h1>Zach Stephends Example app from html</h1>
+<!-- <h1>Zach Stephends Example app from html</h1> -->
 <!-- 
 <p>The setup of the Django React Boilerplate Example App was successful.</p>
 
 <h2>React Example App</h2>
 <p>Here is an example of a React app included in the Django framework:</p> -->
 
-<div id="react-app">tmp</div>
+<div id="react-app"></div>
 
 <!-- <h2>Django Example2 App</h2>
 <p>This is an example Django app for creating, reading and voting on polls. The app closely follows the official
