--- a/frontend/sass/components/menubar-styles.scss
+++ b/frontend/sass/components/menubar-styles.scss
@@ -11,18 +11,45 @@
 /** HEADER */
 
 /** NAVIGATION BAR */
-nav {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
+nav-image-container{
+    width: 100%;
+    height: 25%;
+    min-width: 100%;
+    position: relative  ;
+    size:initial;    
+    margin:auto;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background-color: transparent;
+    .image-center {
+      max-width: 100%;
+      max-height: auto;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      display: table-cell;
+      vertical-align: middle 
+      }
+} 
+nav{
+
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+    top: 0%;
+    width: 96%;
+    height: 35%;
+    margin: 0 2%;
+
+
   ul {
     text-align: center;
     list-style-type: none;
     list-style-type: none;
     margin: 0;
-    padding: 15px;
+    padding: 15px 0px;
     li {
       display: inline;
       font-family: "Fira Sans", sans-serif;
@@ -30,9 +57,12 @@ nav {
       a {
         color: #f2f2f2;
         text-decoration: none;
-        padding: 14px;
+        padding: 5%;
         &:hover {
-          background-color: #111;
+          background-color: rgb(246, 36, 36);
+          font-style:inherit;
+          text-decoration: none;
+          color: #333;
         }
       }
     }
